--- a/style.css
+++ b/style.css
@@ -2,6 +2,12 @@
 @import url('https://fonts.googleapis.com/css?family=Courgette&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap');
 
+
+
+
+
+
+
 /*-------------------------------------------------Colours*/
 
 .bg-color-name-title {
@@ -178,3 +184,20 @@ footer p {
 }
 
 /*-------------------------------------------------Footer*/
+
+/*---------------------------------------------MEDIA QUERYS*/
+
+@media (max-width: 767px){
+    .general-sub {
+        text-align: center;
+    }
+
+    .list-inline-item {
+        padding-left: 0;
+    }
+    
+    .social-links {
+        text-align: center;
+    }
+}
+/*---------------------------------------------MEDIA QUERYS*/
