--- a/style.css
+++ b/style.css
@@ -13,6 +13,9 @@
 .bg-color-name-title {
     background-color: gray;
 }
+.bg-color-three-reasons {
+    background-color: #fff;
+}
 
 .ui-menu-color-home {
     background-color: rgb(99, 95, 95);
@@ -43,6 +46,10 @@ h1,h2,h3,h4,h5 {
     color: #fff;
 }
 
+.section-column h3 {
+    color: black;
+}
+
 .uppercase {
     text-transform: uppercase;
 }
@@ -57,6 +64,25 @@ h1,h2,h3,h4,h5 {
 .inline-block {
     display: inline-block;
 }
+
+.row-table {
+    display: table;
+}
+
+.section-column {
+    display: table-cell;
+    padding: 0 30px 30px;
+    float: none;
+}
+
+.section-heading {
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    margin-top: 25px;
+    margin-bottom: 40px;
+}
+
+
 
 /*---------------------------------------Special paddings/margins/text*/
 
@@ -95,6 +121,7 @@ header {
 
 .menucontainer {
     font-size: 0;
+    margin-bottom: 0;
 }
 
 #nav li {
@@ -135,6 +162,14 @@ header {
     font-weight: 300;
     letter-spacing: 2px;
 }
+/*-------------------------------------------------Heading*/
+
+/*-------------------------------------------------Content*/
+
+
+
+
+/*-------------------------------------------------Content*/
 
 /*-------------------------------------------------Hover*/
 .menuitem a:hover {
