--- a/style2.css
+++ b/style2.css
@@ -4,15 +4,16 @@
 
 
 
-
+/*Header ++ Home Page*/
 html,
 body,
+main,
 header,
-#img-bg {
+.img-bg {
     height: 100%
 }
 
-#img-bg {
+.img-bg {
     background: url("img/circle.jpg")no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -33,9 +34,10 @@ header,
 
 .links a {
     color: #fff;
-    background-color: rgba(115, 174, 192, 0.466);
+    background-color: rgba(115, 174, 192, 0.84);
     text-transform: uppercase;
     font-size: 18px;
+    font-weight: 300;
     font-family: "Roboto", sans-serif;
     transition: all 0.3s ease-in-out;
     -moz-transition: all 0.3s ease-in-out;
@@ -76,13 +78,88 @@ header,
 .header-quote {
     font-family: "Courgette", sans-serif;
     font-size: 17px;
+    letter-spacing: 1px;
     position: relative;
     top: 32%;
     left: 38%;
     width: 400px;
 }
 
+/*Header ++ Home Page*/
+
+/*About*/
+
+
+.bg-about {
+    background: url("img/laptop2.jpg")no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+.about-me-text {
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+}
+main p {
+    color: black;
+    margin-top: 17px;
+    font-size: 17px;
+}
+
+main h3 {
+    color: black;
+    font-family: "roboto", sans-serif;
+    font-weight: 300;
+    letter-spacing: 2px;
+}
+
+.thought {
+    position: relative;
+    top:40%;
+    font-family: "Courgette",sans-serif;
+    letter-spacing: 1px;
+}
+
+
+.what-i-use {
+    position: relative;
+    left:35%;
+    margin-top: 30px;
+}
+
+.my-work, h3 {
+    margin-bottom: 30px;
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+}
+
+.site1 img {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    margin-top: 15px;
+}
+
+.site1 {
+    background-color: rgb(222, 225, 232);
+    padding-top: 20px;
+}
+
+.site1 h4 {
+    padding-top: 34%;
+}
+
+.site1p {
+    padding-top: 4%;
+}
+
+
+/*About*/
+
 /*Media queries*/
+
 @media (max-width: 1024px) {
     .header-quote {
         top: 35%;
@@ -90,12 +167,14 @@ header,
         
     }
 }
+
 @media (max-width: 768px) {
     .header-quote {
         top: 33%;
         left: 25%;
     }
 }
+
 @media (max-width: 414px) {
     .header-quote {
         top: 27%;
@@ -103,11 +182,24 @@ header,
         width: 80%;
     }
 }
+
 @media (max-width: 375px) {
     .header-quote {
         top: 23%;
         left: 10%;
         width: 80%;
+    }
+}
+
+@media (max-width: 414px) {
+    .thought {
+        z-index: -1;
+    }
+}
+
+@media (max-width: 414px) {
+    .site1 h4 {
+        padding-top: 10%;
     }
 }
 /*Media queries*/
