--- a/style2.css
+++ b/style2.css
@@ -122,6 +122,23 @@ main h3 {
     letter-spacing: 1px;
 }
 
+.point-div-size {
+    height: 225px;
+}
+
+.point-down {
+    position: relative;
+    left: 45%;
+    top: 225px;
+    font-size: 35px;
+    color: #fff;
+    border: 1px solid #fff;
+    padding: 10px;
+    border-radius: 50%;
+    background-color: #86b8c8;
+
+}
+
 
 .what-i-use {
     background-color: #d8dfe5;
@@ -263,6 +280,20 @@ main h3 {
         border: 1px solid #d8dfe5;
         margin-top: 30px;
         padding-left: 33%;
+    }
+}
+
+@media (max-width: 414px) {
+    .point-div-size {
+        height: 100px;
+    }
+    .point-down {
+        position: relative;
+        left: 45%;
+        top: 100px;
+        font-size: 35px;
+        padding: 10px;
+        border-radius: 50%;     
     }
 }
 /*Media queries*/
